src/grammar/vlgParser.js
// Generated from c:\code\logic2\src\grammar\vlg.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var vlgListener = require('./vlgListener').vlgListener;
var vlgVisitor = require('./vlgVisitor').vlgVisitor;

 /* eslint-disable */ 
var grammarFileName = "vlg.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'module'", "';'", "'endmodule'", "'#'", "'('", 
                     "'parameter'", "')'", "','", "'reg'", "'input'", "'output'", 
                     "'test'", "'begin'", "'end'", "'{'", "'}'", "'$display'", 
                     "'localparam'", "'wire'", "'.'", "'and'", "'or'", "'xor'", 
                     "'nand'", "'nor'", "'xnor'", "'not'", "'control'", 
                     "'response'", "'buffer'", "'sevenseg'", "'number'", 
                     "'led'", "'ledbar'", "'assign'", "'initial'", "'always'", 
                     "'@'", "'posedge'", "'negedge'", "'if'", "'else'", 
                     "'case'", "'endcase'", "':'", "'default'", "'$error'", 
                     "'?'", "'['", "']'", "'\"'", "'Main'", null, null, 
                     null, null, "'!'", "'~'", "'~&'", "'~|'", "'^'", "'='", 
                     "'+'", "'-'", "'&'", "'|'", "'*'", "'/'", "'<'", "'<='", 
                     "'>'", "'>='", "'=='", "'!='", "'<<'", "'>>'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, "MAIN", 
                      "Decimal_number", "Binary_number", "Octal_number", 
                      "Hex_number", "NOT", "NEG", "NAND", "NOR", "XOR", 
                      "ASSIGN", "PLUS", "MINUS", "AND", "OR", "MUL", "DIV", 
                      "LT", "LTE", "GT", "GTE", "EQUAL", "NOTEQUAL", "SHL", 
                      "SHR", "One_line_comment", "Block_comment", "IDENTIFIER", 
                      "White_space" ];

var ruleNames =  [ "source_text", "modules", "module_main", "module", "module_parameter", 
                   "module_ports", "port_declaration", "port_identifier_list", 
                   "port_direction", "module_item", "test_bench", "test_time", 
                   "time_stamp", "time_assignment_list", "time_assignment", 
                   "display_bench", "display_assignment", "localparam_declaration", 
                   "net_declaration", "reg_declaration", "register_identifier_list", 
                   "register_identifier", "simple_identifier_list", "module_instantiation", 
                   "parameter_value_assignment", "named_module_connections_list", 
                   "named_port_connection", "ordered_module_connections_list", 
                   "gate_instantiation", "gate_type", "net_assignment", 
                   "initial_construct", "always_construct", "event_list", 
                   "event_every", "event_primary", "event_type", "statement_block", 
                   "seq_block", "statement", "blocking_assignment", "conditional_statement", 
                   "case_statement", "case_clause", "case_default", "error_statement", 
                   "concatenation", "multiple_concatenation", "expression", 
                   "expr", "binary_gate_op", "unary_gate_op", "lvalue", 
                   "unary_operator", "binary_operator", "number", "defined_connection_id", 
                   "defined_connection_id_list", "identifier_list", "range", 
                   "identifier", "string" ];

function vlgParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

vlgParser.prototype = Object.create(antlr4.Parser.prototype);
vlgParser.prototype.constructor = vlgParser;

Object.defineProperty(vlgParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

vlgParser.EOF = antlr4.Token.EOF;
vlgParser.T__0 = 1;
vlgParser.T__1 = 2;
vlgParser.T__2 = 3;
vlgParser.T__3 = 4;
vlgParser.T__4 = 5;
vlgParser.T__5 = 6;
vlgParser.T__6 = 7;
vlgParser.T__7 = 8;
vlgParser.T__8 = 9;
vlgParser.T__9 = 10;
vlgParser.T__10 = 11;
vlgParser.T__11 = 12;
vlgParser.T__12 = 13;
vlgParser.T__13 = 14;
vlgParser.T__14 = 15;
vlgParser.T__15 = 16;
vlgParser.T__16 = 17;
vlgParser.T__17 = 18;
vlgParser.T__18 = 19;
vlgParser.T__19 = 20;
vlgParser.T__20 = 21;
vlgParser.T__21 = 22;
vlgParser.T__22 = 23;
vlgParser.T__23 = 24;
vlgParser.T__24 = 25;
vlgParser.T__25 = 26;
vlgParser.T__26 = 27;
vlgParser.T__27 = 28;
vlgParser.T__28 = 29;
vlgParser.T__29 = 30;
vlgParser.T__30 = 31;
vlgParser.T__31 = 32;
vlgParser.T__32 = 33;
vlgParser.T__33 = 34;
vlgParser.T__34 = 35;
vlgParser.T__35 = 36;
vlgParser.T__36 = 37;
vlgParser.T__37 = 38;
vlgParser.T__38 = 39;
vlgParser.T__39 = 40;
vlgParser.T__40 = 41;
vlgParser.T__41 = 42;
vlgParser.T__42 = 43;
vlgParser.T__43 = 44;
vlgParser.T__44 = 45;
vlgParser.T__45 = 46;
vlgParser.T__46 = 47;
vlgParser.T__47 = 48;
vlgParser.T__48 = 49;
vlgParser.T__49 = 50;
vlgParser.T__50 = 51;
vlgParser.MAIN = 52;
vlgParser.Decimal_number = 53;
vlgParser.Binary_number = 54;
vlgParser.Octal_number = 55;
vlgParser.Hex_number = 56;
vlgParser.NOT = 57;
vlgParser.NEG = 58;
vlgParser.NAND = 59;
vlgParser.NOR = 60;
vlgParser.XOR = 61;
vlgParser.ASSIGN = 62;
vlgParser.PLUS = 63;
vlgParser.MINUS = 64;
vlgParser.AND = 65;
vlgParser.OR = 66;
vlgParser.MUL = 67;
vlgParser.DIV = 68;
vlgParser.LT = 69;
vlgParser.LTE = 70;
vlgParser.GT = 71;
vlgParser.GTE = 72;
vlgParser.EQUAL = 73;
vlgParser.NOTEQUAL = 74;
vlgParser.SHL = 75;
vlgParser.SHR = 76;
vlgParser.One_line_comment = 77;
vlgParser.Block_comment = 78;
vlgParser.IDENTIFIER = 79;
vlgParser.White_space = 80;

vlgParser.RULE_source_text = 0;
vlgParser.RULE_modules = 1;
vlgParser.RULE_module_main = 2;
vlgParser.RULE_module = 3;
vlgParser.RULE_module_parameter = 4;
vlgParser.RULE_module_ports = 5;
vlgParser.RULE_port_declaration = 6;
vlgParser.RULE_port_identifier_list = 7;
vlgParser.RULE_port_direction = 8;
vlgParser.RULE_module_item = 9;
vlgParser.RULE_test_bench = 10;
vlgParser.RULE_test_time = 11;
vlgParser.RULE_time_stamp = 12;
vlgParser.RULE_time_assignment_list = 13;
vlgParser.RULE_time_assignment = 14;
vlgParser.RULE_display_bench = 15;
vlgParser.RULE_display_assignment = 16;
vlgParser.RULE_localparam_declaration = 17;
vlgParser.RULE_net_declaration = 18;
vlgParser.RULE_reg_declaration = 19;
vlgParser.RULE_register_identifier_list = 20;
vlgParser.RULE_register_identifier = 21;
vlgParser.RULE_simple_identifier_list = 22;
vlgParser.RULE_module_instantiation = 23;
vlgParser.RULE_parameter_value_assignment = 24;
vlgParser.RULE_named_module_connections_list = 25;
vlgParser.RULE_named_port_connection = 26;
vlgParser.RULE_ordered_module_connections_list = 27;
vlgParser.RULE_gate_instantiation = 28;
vlgParser.RULE_gate_type = 29;
vlgParser.RULE_net_assignment = 30;
vlgParser.RULE_initial_construct = 31;
vlgParser.RULE_always_construct = 32;
vlgParser.RULE_event_list = 33;
vlgParser.RULE_event_every = 34;
vlgParser.RULE_event_primary = 35;
vlgParser.RULE_event_type = 36;
vlgParser.RULE_statement_block = 37;
vlgParser.RULE_seq_block = 38;
vlgParser.RULE_statement = 39;
vlgParser.RULE_blocking_assignment = 40;
vlgParser.RULE_conditional_statement = 41;
vlgParser.RULE_case_statement = 42;
vlgParser.RULE_case_clause = 43;
vlgParser.RULE_case_default = 44;
vlgParser.RULE_error_statement = 45;
vlgParser.RULE_concatenation = 46;
vlgParser.RULE_multiple_concatenation = 47;
vlgParser.RULE_expression = 48;
vlgParser.RULE_expr = 49;
vlgParser.RULE_binary_gate_op = 50;
vlgParser.RULE_unary_gate_op = 51;
vlgParser.RULE_lvalue = 52;
vlgParser.RULE_unary_operator = 53;
vlgParser.RULE_binary_operator = 54;
vlgParser.RULE_number = 55;
vlgParser.RULE_defined_connection_id = 56;
vlgParser.RULE_defined_connection_id_list = 57;
vlgParser.RULE_identifier_list = 58;
vlgParser.RULE_range = 59;
vlgParser.RULE_identifier = 60;
vlgParser.RULE_string = 61;


function Source_textContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = vlgParser.RULE_source_text;
    return this;
}

Source_textContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Source_textContext.prototype.constructor = Source_textContext;

Source_textContext.prototype.modules = function() {
    return this.getTypedRuleContext(ModulesContext,0);
};

Source_textContext.prototype.EOF = function() {
    return this.getToken(vlgParser.EOF, 0);
};

Source_textContext.prototype.enterRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.enterSource_text(this);
	}
};

Source_textContext.prototype.exitRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.exitSource_text(this);
	}
};

Source_textContext.prototype.accept = function(visitor) {
    if ( visitor instanceof vlgVisitor ) {
        return visitor.visitSource_text(this);
    } else {
        return visitor.visitChildren(this);
    }
};




vlgParser.Source_textContext = Source_textContext;

vlgParser.prototype.source_text = function() {

    var localctx = new Source_textContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, vlgParser.RULE_source_text);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 124;
        this.modules();
        this.state = 125;
        this.match(vlgParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ModulesContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = vlgParser.RULE_modules;
    return this;
}

ModulesContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModulesContext.prototype.constructor = ModulesContext;

ModulesContext.prototype.module_main = function() {
    return this.getTypedRuleContext(Module_mainContext,0);
};

ModulesContext.prototype.EOF = function() {
    return this.getToken(vlgParser.EOF, 0);
};

ModulesContext.prototype.module = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ModuleContext);
    } else {
        return this.getTypedRuleContext(ModuleContext,i);
    }
};

ModulesContext.prototype.enterRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.enterModules(this);
	}
};

ModulesContext.prototype.exitRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.exitModules(this);
	}
};

ModulesContext.prototype.accept = function(visitor) {
    if ( visitor instanceof vlgVisitor ) {
        return visitor.visitModules(this);
    } else {
        return visitor.visitChildren(this);
    }
};




vlgParser.ModulesContext = ModulesContext;

vlgParser.prototype.modules = function() {

    var localctx = new ModulesContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, vlgParser.RULE_modules);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 130;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 127;
                this.module(); 
            }
            this.state = 132;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 133;
        this.module_main();
        this.state = 134;
        this.match(vlgParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Module_mainContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = vlgParser.RULE_module_main;
    return this;
}

Module_mainContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Module_mainContext.prototype.constructor = Module_mainContext;

Module_mainContext.prototype.MAIN = function() {
    return this.getToken(vlgParser.MAIN, 0);
};

Module_mainContext.prototype.module_parameter = function() {
    return this.getTypedRuleContext(Module_parameterContext,0);
};

Module_mainContext.prototype.module_ports = function() {
    return this.getTypedRuleContext(Module_portsContext,0);
};

Module_mainContext.prototype.module_item = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Module_itemContext);
    } else {
        return this.getTypedRuleContext(Module_itemContext,i);
    }
};

Module_mainContext.prototype.test_bench = function() {
    return this.getTypedRuleContext(Test_benchContext,0);
};

Module_mainContext.prototype.display_bench = function() {
    return this.getTypedRuleContext(Display_benchContext,0);
};

Module_mainContext.prototype.enterRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.enterModule_main(this);
	}
};

Module_mainContext.prototype.exitRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.exitModule_main(this);
	}
};

Module_mainContext.prototype.accept = function(visitor) {
    if ( visitor instanceof vlgVisitor ) {
        return visitor.visitModule_main(this);
    } else {
        return visitor.visitChildren(this);
    }
};




vlgParser.Module_mainContext = Module_mainContext;

vlgParser.prototype.module_main = function() {

    var localctx = new Module_mainContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, vlgParser.RULE_module_main);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 136;
        this.match(vlgParser.T__0);
        this.state = 137;
        this.match(vlgParser.MAIN);
        this.state = 139;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===vlgParser.T__3) {
            this.state = 138;
            this.module_parameter();
        }

        this.state = 142;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===vlgParser.T__4) {
            this.state = 141;
            this.module_ports();
        }

        this.state = 144;
        this.match(vlgParser.T__1);
        this.state = 148;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 9)) & ~0x1f) == 0 && ((1 << (_la - 9)) & ((1 << (vlgParser.T__8 - 9)) | (1 << (vlgParser.T__17 - 9)) | (1 << (vlgParser.T__18 - 9)) | (1 << (vlgParser.T__20 - 9)) | (1 << (vlgParser.T__21 - 9)) | (1 << (vlgParser.T__22 - 9)) | (1 << (vlgParser.T__23 - 9)) | (1 << (vlgParser.T__24 - 9)) | (1 << (vlgParser.T__25 - 9)) | (1 << (vlgParser.T__26 - 9)) | (1 << (vlgParser.T__27 - 9)) | (1 << (vlgParser.T__28 - 9)) | (1 << (vlgParser.T__29 - 9)) | (1 << (vlgParser.T__30 - 9)) | (1 << (vlgParser.T__31 - 9)) | (1 << (vlgParser.T__32 - 9)) | (1 << (vlgParser.T__33 - 9)) | (1 << (vlgParser.T__34 - 9)) | (1 << (vlgParser.T__35 - 9)) | (1 << (vlgParser.T__36 - 9)))) !== 0) || _la===vlgParser.IDENTIFIER) {
            this.state = 145;
            this.module_item();
            this.state = 150;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 152;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===vlgParser.T__11) {
            this.state = 151;
            this.test_bench();
        }

        this.state = 155;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===vlgParser.T__16) {
            this.state = 154;
            this.display_bench();
        }

        this.state = 157;
        this.match(vlgParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ModuleContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = vlgParser.RULE_module;
    return this;
}

ModuleContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ModuleContext.prototype.constructor = ModuleContext;

ModuleContext.prototype.IDENTIFIER = function() {
    return this.getToken(vlgParser.IDENTIFIER, 0);
};

ModuleContext.prototype.module_parameter = function() {
    return this.getTypedRuleContext(Module_parameterContext,0);
};

ModuleContext.prototype.module_ports = function() {
    return this.getTypedRuleContext(Module_portsContext,0);
};

ModuleContext.prototype.module_item = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Module_itemContext);
    } else {
        return this.getTypedRuleContext(Module_itemContext,i);
    }
};

ModuleContext.prototype.enterRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.enterModule(this);
	}
};

ModuleContext.prototype.exitRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.exitModule(this);
	}
};

ModuleContext.prototype.accept = function(visitor) {
    if ( visitor instanceof vlgVisitor ) {
        return visitor.visitModule(this);
    } else {
        return visitor.visitChildren(this);
    }
};




vlgParser.ModuleContext = ModuleContext;

vlgParser.prototype.module = function() {

    var localctx = new ModuleContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, vlgParser.RULE_module);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 159;
        this.match(vlgParser.T__0);
        this.state = 160;
        this.match(vlgParser.IDENTIFIER);
        this.state = 162;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===vlgParser.T__3) {
            this.state = 161;
            this.module_parameter();
        }

        this.state = 165;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===vlgParser.T__4) {
            this.state = 164;
            this.module_ports();
        }

        this.state = 167;
        this.match(vlgParser.T__1);
        this.state = 171;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(((((_la - 9)) & ~0x1f) == 0 && ((1 << (_la - 9)) & ((1 << (vlgParser.T__8 - 9)) | (1 << (vlgParser.T__17 - 9)) | (1 << (vlgParser.T__18 - 9)) | (1 << (vlgParser.T__20 - 9)) | (1 << (vlgParser.T__21 - 9)) | (1 << (vlgParser.T__22 - 9)) | (1 << (vlgParser.T__23 - 9)) | (1 << (vlgParser.T__24 - 9)) | (1 << (vlgParser.T__25 - 9)) | (1 << (vlgParser.T__26 - 9)) | (1 << (vlgParser.T__27 - 9)) | (1 << (vlgParser.T__28 - 9)) | (1 << (vlgParser.T__29 - 9)) | (1 << (vlgParser.T__30 - 9)) | (1 << (vlgParser.T__31 - 9)) | (1 << (vlgParser.T__32 - 9)) | (1 << (vlgParser.T__33 - 9)) | (1 << (vlgParser.T__34 - 9)) | (1 << (vlgParser.T__35 - 9)) | (1 << (vlgParser.T__36 - 9)))) !== 0) || _la===vlgParser.IDENTIFIER) {
            this.state = 168;
            this.module_item();
            this.state = 173;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 174;
        this.match(vlgParser.T__2);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Module_parameterContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = vlgParser.RULE_module_parameter;
    return this;
}

Module_parameterContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Module_parameterContext.prototype.constructor = Module_parameterContext;

Module_parameterContext.prototype.IDENTIFIER = function() {
    return this.getToken(vlgParser.IDENTIFIER, 0);
};

Module_parameterContext.prototype.ASSIGN = function() {
    return this.getToken(vlgParser.ASSIGN, 0);
};

Module_parameterContext.prototype.number = function() {
    return this.getTypedRuleContext(NumberContext,0);
};

Module_parameterContext.prototype.enterRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.enterModule_parameter(this);
	}
};

Module_parameterContext.prototype.exitRule = function(listener) {
    if(listener instanceof vlgListener ) {
        listener.exitModule_parameter(this);
	}
};

Module_parameterContext.prototype.accept = function(visitor) {
    if ( visitor instanceof vlgVisitor ) {
        return visitor.visitModule_parameter(this);
    } else {
        return visitor.visitChildren(this);
    }
};




vlgParser.Module_parameterContext = Module_parameterContext;

vlgParser.prototype.module_parameter = function() {

    var localctx = new Module_parameterContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, vlgParser.RULE_module_parameter);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 176;
        this.match(vlgParser.T__3);
        this.state = 177;
        this.match(vlgParser.T__4);
        this.state = 178;
        this.match(vlgParser.T__5);
        this.state = 179;
        this.match(vlgParser.IDENTIFIER);
        this.state = 180;
        this.match(vlgParser.ASSIGN);
        this.state = 181;
        this.number();
        this.state = 182;
        this.match(vlgParser.T__6);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Module_portsContext(parser, parent, invokingState) {
